feat: add temporal client

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -30,13 +30,20 @@ REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
 # === Elasticsearch Configuration ===
-ELASTICSEARCH_URL=http://elasticsearch:9200
+ELASTIC_HOST=localhost
+ELASTIC_PORT=9200
 ELASTIC_USER=elastic
 ELASTIC_PASSWORD=changeme
 
 # === Milvus Configuration ===
 MILVUS_HOST=milvus-standalone
 MILVUS_PORT=19530
+
+# === Temporal Configuration ===
+TEMPORAL_HOST=localhost
+TEMPORAL_PORT=7233
+TEMPORAL_NAMESPACE=default
+TEMPORAL_RPC_TIMEOUT=30
 
 # === ClickHouse Configuration ===
 CLICKHOUSE_PORT=8123
