--- a/docker/docker-compose.build.yml
+++ b/docker/docker-compose.build.yml
@@ -26,8 +26,12 @@ services:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - MILVUS_HOST=${MILVUS_HOST}
       - MILVUS_PORT=${MILVUS_PORT:-19530}
-      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
+      - ELASTIC_HOST=${ELASTIC_HOST}
+      - ELASTIC_PORT=${ELASTIC_PORT:-9200}
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - TEMPORAL_HOST=${TEMPORAL_HOST}
+      - TEMPORAL_PORT=${TEMPORAL_PORT:-7233}
+      - TEMPORAL_NAMESPACE=${TEMPORAL_NAMESPACE:-default}
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
       - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
       - LANGFUSE_HOST=${LANGFUSE_HOST}
@@ -51,10 +55,14 @@ services:
         - NEXT_PUBLIC_LANGFUSE_CLOUD_REGION=${NEXT_PUBLIC_LANGFUSE_CLOUD_REGION:-}
     image: ${REGISTRY_URL}/frontend:latest
     depends_on: &langfuse-depends-on
-      - postgres
-      - minio
-      - redis
-      - clickhouse
+      postgres:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      clickhouse:
+        condition: service_healthy
     ports:
       - "3000:3000"
     environment: &langfuse-web-env
@@ -176,7 +184,7 @@ services:
       retries: 3
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:9.1.5
+    image: docker.elastic.co/elasticsearch/elasticsearch:9.2.0
     environment:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD:-changeme}
       - discovery.type=single-node
@@ -302,7 +310,7 @@ services:
       - ES_USER=${ELASTIC_USER:-elastic}
       - ES_PWD=${ELASTIC_PASSWORD:-changeme}
       - ES_SEEDS=elasticsearch
-      - TEMPORAL_ADDRESS=temporal:7233
+      - TEMPORAL_ADDRESS=${TEMPORAL_HOST:-temporal}:${TEMPORAL_PORT:-7233}
     ports:
       - "7233:7233"
 
