--- a/api/.env.example
+++ b/api/.env.example
@@ -42,12 +42,20 @@ REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
 # === Elasticsearch Configuration ===
-ELASTICSEARCH_URL=http://localhost:9200
+ELASTIC_HOST=localhost
+ELASTIC_PORT=9200
+ELASTIC_USER=elastic
 ELASTIC_PASSWORD=myelasticsearchsecret
 
 # === Milvus Configuration ===
 MILVUS_HOST=milvus-standalone
 MILVUS_PORT=19530
+
+# === Temporal Configuration ===
+TEMPORAL_HOST=localhost
+TEMPORAL_PORT=7233
+TEMPORAL_NAMESPACE=default
+TEMPORAL_RPC_TIMEOUT=30
 
 # === Debug ===
 DEBUG=true
