--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -73,39 +73,6 @@ services:
       timeout: 10s
       retries: 3
 
-  postgres:
-    image: postgres
-    environment:
-      POSTGRES_DB: ${DB_NAME:-mas}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PWD:-your-secure-password-here}
-    ports:
-      - "${DB_PORT:-5432}:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${DB_NAME:-mas}"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  redis:
-    image: redis
-    environment:
-      REDIS_PASSWORD: ${REDIS_PASSWORD:-myredissecret}
-    ports:
-      - "${REDIS_PORT:-6379}:6379"
-    volumes:
-      - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    command: --requirepass ${REDIS_PASSWORD:-myredissecret}
-    restart: always
-
   clickhouse:
     image: clickhouse/clickhouse-server
     user: "101:101"
@@ -207,11 +174,43 @@ services:
       timeout: 20s
       retries: 3
 
+  postgres:
+    image: postgres
+    environment:
+      POSTGRES_DB: ${DB_NAME:-mas}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PWD:-your-secure-password-here}
+    ports:
+      - "${DB_PORT:-5432}:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${DB_NAME:-mas}"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  redis:
+    image: redis
+    environment:
+      REDIS_PASSWORD: ${REDIS_PASSWORD:-myredissecret}
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    command: --requirepass ${REDIS_PASSWORD:-myredissecret}
+    restart: always
+
   temporal:
     image: temporalio/auto-setup
     depends_on:
-      - langfuse-web
-      - langfuse-worker
+      - postgres
       - elasticsearch
     environment:
       - DB=postgres12
