--- a/api/.env.example
+++ b/api/.env.example
@@ -23,6 +23,7 @@ ANTHROPIC_API_KEY=your_anthropic_api_key_here
 GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+ZENMUX_API_KEY=your_zenmux_api_key_here
 
 # === Audio Processing ===
 DASHSCOPE_API_KEY=your_dashscope_api_key_here
