--- a/api/.dockerignore
+++ b/api/.dockerignore
@@ -1,3 +1,4 @@
+# Environment files
 .env
 *.env.*
 
@@ -10,14 +11,27 @@ logs
 .cursor
 .claude
 
-# venv
+# Virtual environment
 .venv
 
+# Documentation
 *.md
+scripts/setup.*
 
-# misc
-.DS_Store
+# Tests
+test/
+tests/
 
-# Python
+# Python cache
 __pycache__/
 build/
+dist/
+
+# Git
+.git
+.gitignore
+
+# Misc
+.DS_Store
+*.swp
+*.swo
