feat: add temporal worker module and update docker compose file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,43 +1,71 @@
 name: mas-observe
 
+x-shared-var: &shared-mas-env
+  # LLM Provider Keys
+  OPENAI_API_KEY: ${OPENAI_API_KEY}
+  ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
+  GOOGLE_API_KEY: ${GOOGLE_API_KEY}
+  DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+  OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+  # Database
+  DB_HOST: ${DB_HOST}
+  DB_PORT: ${DB_PORT:-5432}
+  DB_NAME: ${DB_NAME}
+  POSTGRES_USER: ${POSTGRES_USER}
+  POSTGRES_PWD: ${POSTGRES_PWD}
+  # Redis
+  REDIS_HOST: ${REDIS_HOST}
+  REDIS_PORT: ${REDIS_PORT:-6379}
+  REDIS_USERNAME: ${REDIS_USERNAME:-}
+  REDIS_PASSWORD: ${REDIS_PASSWORD}
+  # Milvus
+  MILVUS_HOST: ${MILVUS_HOST}
+  MILVUS_PORT: ${MILVUS_PORT:-19530}
+  # Elasticsearch
+  ELASTIC_HOST: ${ELASTIC_HOST}
+  ELASTIC_PORT: ${ELASTIC_PORT:-9200}
+  ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+  # Temporal
+  TEMPORAL_HOST: ${TEMPORAL_HOST}
+  TEMPORAL_PORT: ${TEMPORAL_PORT:-7233}
+  TEMPORAL_NAMESPACE: ${TEMPORAL_NAMESPACE:-default}
+  # Observability
+  LANGFUSE_SECRET_KEY: ${LANGFUSE_SECRET_KEY}
+  LANGFUSE_PUBLIC_KEY: ${LANGFUSE_PUBLIC_KEY}
+  LANGFUSE_HOST: ${LANGFUSE_HOST}
+
 services:
   # Main MAS application
   api:
     image: ${REGISTRY_URL}/api:latest
     environment:
-      - APP_KEY=${APP_KEY}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT:-5432}
-      - DB_NAME=${DB_NAME}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PWD=${POSTGRES_PWD}
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT:-6379}
-      - REDIS_USERNAME=${REDIS_USERNAME:-}
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - MILVUS_HOST=${MILVUS_HOST}
-      - MILVUS_PORT=${MILVUS_PORT:-19530}
-      - ELASTIC_HOST=${ELASTIC_HOST}
-      - ELASTIC_PORT=${ELASTIC_PORT:-9200}
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
-      - TEMPORAL_HOST=${TEMPORAL_HOST}
-      - TEMPORAL_PORT=${TEMPORAL_PORT:-7233}
-      - TEMPORAL_NAMESPACE=${TEMPORAL_NAMESPACE:-default}
-      - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
-      - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
-      - LANGFUSE_HOST=${LANGFUSE_HOST}
-      - CALLBACK_URL=${CALLBACK_URL}
-    depends_on:
-      - postgres
-      - redis
-      - elasticsearch
-      - milvus-standalone
-      - temporal
+      <<: *shared-mas-env
+      APP_KEY: ${APP_KEY}
+      CALLBACK_URL: ${CALLBACK_URL}
+    depends_on: &mas-depends-on
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      elasticsearch:
+        condition: service_started
+      milvus-standalone:
+        condition: service_healthy
+      temporal:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    restart: unless-stopped
+
+  worker:
+    image: ${REGISTRY_URL}/api:latest
+    environment:
+      <<: *shared-mas-env
+      MODE: worker
+    depends_on: *mas-depends-on
     restart: unless-stopped
 
   langfuse-web:
@@ -97,7 +125,7 @@ services:
       retries: 3
 
   langfuse-worker:
-    image: ${REGISTRY_URL}/worker:latest
+    image: ${REGISTRY_URL}/langfuse-worker:latest
     depends_on: *langfuse-depends-on
     environment:
       <<: *langfuse-web-env
