--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "google-genai>=1.30.0",
     "greenlet>=3.2.4",
+    "jinja2>=3.1.6",
     "langfuse>=3.3.1",
     "langgraph>=1.0.1",
     "msgpack>=1.1.1",
