fix: finish greeting active trigger and test successfully

--- a/api/core/prompts/templates/active_trigger.yaml
+++ b/api/core/prompts/templates/active_trigger.yaml
@@ -7,6 +7,27 @@
 #   - template: 可选的消息模板参考
 #   - 额外变量: holiday (节假日), campaign (营销活动), notification_content (通知内容)
 
+greeting:
+  description: "问候消息模板 - 用于无客户画像的初始寒暄"
+  version: "1.0"
+  template: |
+    您是一名礼貌友好的客户服务AI助手。请根据有限的对话上下文发送一条热情的问候消息。
+
+    ## 消息要求
+    1. 语气温暖、自然，避免假定任何客户背景
+    2. 内容简洁（不超过2句话），明确表达欢迎与协助意愿
+    3. 可以主动说明自己的角色或可以提供的帮助
+    4. 若对话中已有上下文，简要承接或确认，无需重复信息
+    5. 不要提及未知的个人信息、优惠或活动
+
+    {% if template %}
+    ## 消息模板参考
+    {{ template }}
+    {% endif %}
+
+    ## 生成指示
+    请生成一条通用但真诚的问候语，直接返回消息内容，无需额外说明。
+
 ice_breaking:
   description: "破冰消息模板 - 用于线程创建后的欢迎消息"
   version: "1.0"
@@ -255,4 +276,3 @@ notification:
 
     ## 生成指示
     请生成一条清晰的通知消息。直接返回消息内容，不需要其他说明。
-
