--- a/docker/docker-compose.build.yml
+++ b/docker/docker-compose.build.yml
@@ -119,7 +119,7 @@ services:
         - linux/amd64
       args:
         - NEXT_PUBLIC_LANGFUSE_CLOUD_REGION=${NEXT_PUBLIC_LANGFUSE_CLOUD_REGION:-}
-    image: ${REGISTRY_URL}/worker:latest
+    image: ${REGISTRY_URL}/langfuse-worker:latest
     depends_on: *langfuse-depends-on
     ports:
       - "3030:3030"
