--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -50,10 +50,12 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-      - elasticsearch
-      - temporal
+      elasticsearch:
+        condition: service_started
+      temporal:
+        condition: service_started
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/v1/health"]
       interval: 30s
       timeout: 10s
       retries: 3
