--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -161,11 +161,12 @@ services:
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=false
       - xpack.license.self_generated.type=basic
+      - xpack.ml.enabled=false
       - cluster.routing.allocation.disk.threshold_enabled=true
       - cluster.routing.allocation.disk.watermark.low=512mb
       - cluster.routing.allocation.disk.watermark.high=256mb
       - cluster.routing.allocation.disk.watermark.flood_stage=128mb
-    mem_limit: 1g
+    mem_limit: 2g
     ulimits:
       memlock:
         soft: -1
