--- a/api/.env.example
+++ b/api/.env.example
@@ -24,6 +24,9 @@ GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# === Audio Processing ===
+DASHSCOPE_API_KEY=your_dashscope_api_key_here
+
 # === Database Configuration ===
 DB_HOST=your-database-instance.region.provider.com
 DB_PORT=5432
