--- a/docker/.env.example
+++ b/docker/.env.example
@@ -69,6 +69,10 @@ GOOGLE_API_KEY=your_google_api_key_here
 DEEPSEEK_API_KEY=your_deepseek_api_key_here
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# === Audio Processing ===
+DASHSCOPE_API_KEY=your_dashscope_api_key_here
+MINIMAX_API_KEY=your_minimax_api_key_here
+
 # === Debug ===
 DEBUG=true
 SQLALCHEMY_ECHO=false
