fix: update audio normalized input

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -22,7 +22,7 @@ POSTGRES_USER=postgres
 POSTGRES_PWD=your-secure-password-here
 
 # === Redis Configuration ===
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_USERNAME=
 REDIS_PASSWORD=myredissecret
@@ -30,7 +30,7 @@ REDIS_MAX_CONNECTIONS=10
 REDIS_TTL=7200
 
 # === Elasticsearch Configuration ===
-ELASTIC_HOST=localhost
+ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 ELASTIC_USER=elastic
 ELASTIC_PASSWORD=changeme
@@ -40,7 +40,7 @@ MILVUS_HOST=milvus-standalone
 MILVUS_PORT=19530
 
 # === Temporal Configuration ===
-TEMPORAL_HOST=localhost
+TEMPORAL_HOST=temporal
 TEMPORAL_PORT=7233
 TEMPORAL_NAMESPACE=default
 TEMPORAL_RPC_TIMEOUT=30
