fix: update docker compose file

--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -94,21 +94,24 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:9.2.0
     environment:
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD:-}
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD:-changeme}
       - discovery.type=single-node
       - bootstrap.memory_lock=true
       - xpack.security.enabled=false
       - xpack.security.http.ssl.enabled=false
       - xpack.license.self_generated.type=basic
+      - xpack.ml.enabled=false
+      - xpack.watcher.enabled=false
       - cluster.routing.allocation.disk.threshold_enabled=true
-      - cluster.routing.allocation.disk.watermark.low=512mb
-      - cluster.routing.allocation.disk.watermark.high=256mb
-      - cluster.routing.allocation.disk.watermark.flood_stage=128mb
+      - cluster.routing.allocation.disk.watermark.low=85%
+      - cluster.routing.allocation.disk.watermark.high=90%
+      - cluster.routing.allocation.disk.watermark.flood_stage=95%
     mem_limit: 1g
     ulimits:
       memlock:
         soft: -1
         hard: -1
+    restart: unless-stopped
     ports:
       - "9200:9200"
     volumes:
@@ -155,6 +158,7 @@ services:
     depends_on:
       - etcd
       - minio
+    restart: unless-stopped
 
   minio:
     image: minio/minio
