feat: update docker compose file to make more configurable

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,6 +10,8 @@ x-shared-var: &shared-mas-env
   GOOGLE_API_KEY: ${GOOGLE_API_KEY}
   DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
   OPENROUTER_API_KEY: ${OPENROUTER_API_KEY}
+  DASHSCOPE_API_KEY: ${DASHSCOPE_API_KEY}
+  MINIMAX_API_KEY: ${MINIMAX_API_KEY}
   # Database
   DB_HOST: ${DB_HOST}
   DB_PORT: ${DB_PORT:-5432}
@@ -28,6 +30,7 @@ x-shared-var: &shared-mas-env
   ELASTIC_HOST: ${ELASTIC_HOST}
   ELASTIC_PORT: ${ELASTIC_PORT:-9200}
   ELASTIC_PASSWORD: ${ELASTIC_PASSWORD}
+  ES_MEMORY_INDEX: ${ELASTIC_MEMORY_INDEX}
   # Temporal
   TEMPORAL_HOST: ${TEMPORAL_HOST}
   TEMPORAL_PORT: ${TEMPORAL_PORT:-7233}
