--- a/docker/.env.example
+++ b/docker/.env.example
@@ -34,6 +34,7 @@ ELASTIC_HOST=elasticsearch
 ELASTIC_PORT=9200
 ELASTIC_USER=elastic
 ELASTIC_PASSWORD=changeme
+ES_MEMORY_INDEX=memory_v1
 
 # === Milvus Configuration ===
 MILVUS_HOST=milvus-standalone
