--- a/docker/nginx/nginx.conf.template
+++ b/docker/nginx/nginx.conf.template
@@ -32,10 +32,15 @@ http {
         server api:8000;
     }
 
+    upstream mas_api_test {
+        server api-test:8000;
+    }
+
     upstream observe {
         server langfuse-web:3000;
     }
 
+    # Production server
     server {
         listen ${NGINX_PORT};
         server_name ${NGINX_SERVER_NAME};
@@ -53,15 +58,33 @@ http {
             include /etc/nginx/proxy.conf;
         }
 
-        # Health check
-        location = /healthz {
-            add_header Content-Type text/plain;
-            return 200 'ok';
-        }
-
         # Frontend routes -> web
         location / {
             proxy_pass http://observe;
+            include /etc/nginx/proxy.conf;
+        }
+
+        # HTTPS configuration (injected if enabled)
+        ${HTTPS_CONFIG}
+    }
+
+    # Test server (only active when api-test service is running)
+    server {
+        listen ${NGINX_PORT};
+        server_name ${NGINX_TEST_SERVER_NAME};
+
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+        # Test environment indicator header
+        add_header X-Environment "test" always;
+
+        # API routes -> test backend
+        location /v1 {
+            proxy_pass http://mas_api_test;
             include /etc/nginx/proxy.conf;
         }
 
