--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pyjwt>=2.10.1",
     "pymilvus>=2.6.2",
+    "python-multipart>=0.0.20",
     "redis>=7.0.1",
     "sqlalchemy>=2.0.43",
     "temporalio>=1.18.2",
