--- a/api/data/models.yaml
+++ b/api/data/models.yaml
@@ -105,8 +105,17 @@
       name: "GPT-4.1-nano"
       type: "text"
       enabled: true
-
     - id: "google/gemini-2.5-flash-preview-09-2025"
+      provider: "openrouter"
+      name: "Gemini-2.5-flash"
+      type: "text"
+      enabled: true
+    - id: "qwen/qwen3-coder-flash"
+      provider: "openrouter"
+      name: "Gemini-2.5-flash"
+      type: "text"
+      enabled: true
+    - id: "qwen/qwen-plus-2025-07-28"
       provider: "openrouter"
       name: "Gemini-2.5-flash"
       type: "text"
